# emnapi

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .npmignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  cgen.config.js  eslint.config.js  index.d.ts  index.js  jest.config.ts  package.json  tsconfig.base.json  tsconfig.json  tsconfig.prod.json  tsconfig.test.json
.github/workflows/: bench.yml  ci-wasm32-unknown-emscripten.yml  ci-wasm32-unknown-unknown.yml  ci-wasm32-wasip1-threads.yml  ci-wasm32-wasip1.yml  ci-wasm64-unknown-emscripten.yml  ci.yml  debug.yml  main.yml
docs/: how-it-works.md
example/: .gitignore  CMakeLists.txt  README.md  async.c  async.html  async.js  async.mjs  hello.c  hello.cpp  hello.html  index.html  index.js  index.mjs
include/: emnapi.h  js_native_api.h  napi-inl.h  napi.h  node_api.h
lib/: Handle.ts  HandleScope.ts  LinkedList.ts  c2napi.ts  emnapi.ts  env.ts  error.ts  function.ts  init.ts  internal.ts  life.ts  memory.ts  promise.ts  property.ts  register.ts  runtime.d.ts  script.ts  util.ts  value-operation.ts  value.ts  version.ts  wrap.ts
lib/runtime/: Deferred.ts  Handle.ts  HandleScope.ts  LinkedList.ts  Reference.ts  Store.ts  api-extractor.json  bootstrap.ts  env.ts  index.ts  tsconfig.json  type.ts  util.ts
lib/typings/: compiler.d.ts  ctype.d.ts  napi.d.ts  runtime.d.ts
lib/value/: convert2c.ts  convert2napi.ts  create.ts  global.ts
patches/: typescript+4.6.4.patch  v8.patch
script/: build-runtime.js  build.js  common.js  fetch-v8-headers.js  install.js  progress.js  release.js  spawn.js  test-entry.js  test-release-package.js  test.js  which.js
src/: emnapi.c  lib.c  lib.h  main.c
test/: cgen.config.js  common.c  common.h  common.js  entry_point.c  index.html  index.js  util.js  util.ts
test/arg/: arg.test.js  arg.test.ts
test/array/: array.test.js
test/bigint/: bigint.test.js
test/c2napi/: binding.c  napi_create_int32.test.ts
test/callback/: callback.test.js  callback.test.ts
test/constructor/: constructor.test.js
test/conversion/: conversion.test.js
test/dataview/: dataview.test.js
test/date/: date.test.js
test/emnapi/: binding.c  emnapi.test.js
test/emnapitest/: emnapi.test.js
test/env/: env.test.js  env.test.ts
test/error/: binding.c  error.test.js  error.test.ts
test/exception/: binding.c  exception.test.js
test/fnfac/: fnfac.test.js  fnfac.test.ts
test/fnwrap/: fnwrap.test.js
test/function/: binding.c  function.test.js  function.test.ts
test/general/: binding.c  finalizer.test.js  general.test.js  general.test.ts  global.test.js  run.test.js  status.test.js
test/hello/: hello.test.js  hello.test.ts
test/newtarget/: newtarget.test.js
test/number/: number.test.js
test/object/: object.test.js  object_null.test.js  test_object.c
test/objfac/: objfac.test.js  objfac.test.ts
test/objwrap/: myobject.cc  objwrap.test.js
test/passwrap/: passwrap.test.js
test/promise/: promise.test.js
test/property/: property.test.js
test/ref/: ref.test.js
test/ref_double_free/: ref_double_free.test.js
test/scope/: scope.test.js
test/string/: string.test.js  string.test.ts
test/symbol/: symbol.test.js
test/typedarray/: typedarray.test.js
test/value/: binding.c  (+2 more)
test/value-operation/: binding.c  value-operation.test.js  value-operation.test.ts
(+6 files in other folders)
